--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,12 @@ dependencies:
 
   gallery_saver: ^2.3.2
 
+  dio: ^4.0.6
+
+  external_path: ^1.0.1
+
+  sqflite: ^2.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
